--- a/ruoyi-flowable/pom.xml
+++ b/ruoyi-flowable/pom.xml
@@ -16,10 +16,10 @@
 			<groupId>com.ruoyi</groupId>
 			<artifactId>ruoyi-framework</artifactId>
 		</dependency>
-<!--		<dependency>-->
-<!--			<groupId>com.ruoyi</groupId>-->
-<!--			<artifactId>ruoyi-system</artifactId>-->
-<!--		</dependency>-->
+		<dependency>
+			<groupId>com.ruoyi</groupId>
+			<artifactId>ruoyi-system</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>com.ruoyi</groupId>
 			<artifactId>ruoyi-common</artifactId>
